<resources>
    <string name="app_name" translatable="false">SeaMapDroid</string>
    <string name="no_connection">Internet connection is required</string>
    <string name="search">Search</string>
    <string name="legend">Legend</string>
    <string name="quit">Quit</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_query">Invalid query</string>
    <string name="no_result_found">No result found</string>
    <string name="action_preferences">Settings</string>
    <string name="preferences">Map settings</string>
    <string name="preference_show_mapnik">Show Mapnik layer</string>
    <string name="preference_show_mapnik_summary">Enable the layer for add it in the map</string>
    <string name="preference_show_deeps">Show Deeps layer</string>
    <string name="preference_show_deeps_summary">Enable the layer for add it in the map</string>
    <string name="preference_show_seamark">Show Seamark layer</string>
    <string name="preference_show_seamark_summary">Enable the layer for add it in the map</string>
    <string name="preference_show_pois">Show Pois layer</string>
    <string name="preference_show_pois_summary">Enable the layer for add it in the map</string>
    <string name="preference_show_grid">Show Grid layer</string>
    <string name="preference_show_grid_summary">Enable the layer for add it in the map</string>
    <string name="preference_gps">Gps service</string>
    <string name="preference_center_map">Keep centered map</string>
    <string name="preference_center_map_summary">Keep your map centered when your position is updated</string>
    <string name="preference_trace_route">Trace my route</string>
    <string name="preference_trace_route_summary">Keep track of my route</string>
    <string name="gps_ready">The location service is ready to trace your position</string>
    <string name="gps_not_available">The location service is no longer available</string>
    <string name="gps_on">Tracking enabled</string>
    <string name="gps_off">Tracking disabled</string>
    <string name="harbour">Harbour</string>
    <string name="seamarks">Sea marks</string>
    <string name="lights">Lights</string>
    <string name="lock">Bridges/Locks</string>
    <string name="legend_harbour">Harbour</string>
    <string name="legend_fishing_harbour">Fishing harbour</string>
    <string name="legend_marina">Marina</string>
    <string name="legend_anchorage">Anchorage</string>
    <string name="legend_breakwater">Breakwater</string>
    <string name="legend_pier">Pier</string>
    <string name="legend_crane">Crane</string>
    <string name="legend_slipway">Slipway</string>
    <string name="legend_harbour_master">Harbour master</string>
    <string name="legend_waste_disposal">Slipway</string>
    <string name="legend_safe_water">Safe water</string>
    <string name="legend_starboard_mark">Starboard mark</string>
    <string name="legend_lateral_port">Port mark</string>
    <string name="legend_lateral_pref_starboard">Preferred channel: starboard</string>
    <string name="legend_lateral_pref_port">Preferred channel: port</string>
    <string name="legend_cardinal_north">North cardinal mark</string>
    <string name="legend_cardinal_east">East cardinal mark</string>
    <string name="legend_cardinal_south">South cardinal mark</string>
    <string name="legend_cardinal_west">West cardinal mark</string>
    <string name="legend_isolated_danger">Isolated danger mark</string>
    <string name="legend_special_purpose">Special mark</string>
    <string name="legend_lighthouse">Lighthouse</string>
    <string name="legend_beacon_green">Green beacon</string>
    <string name="legend_beacon_red">Red beacon</string>
    <string name="legend_beacon_white">White beacon</string>
    <string name="legend_lock_gate">Lock gate</string>
    <string name="legend_lock">Lock</string>
    <string name="legend_wier_small">Wier (small)</string>
    <string name="legend_wier_big">Wier (big)</string>
    <string name="action_source">Source code</string>
    <string name="action_about">About</string>
    <string name="about">About of SeaMapDroid</string>
    <string name="about_content">
        <![CDATA[

            <style>
                a {
                    color: #303F9F;
                }
            </style>

            <h1>Welcome!</h1>

            <p>Thanks for using SeaMapDroid, a "politically" <b>independent</b> app for open the <b>OpenSeaMap</b> using a <b>Free/Libre software</b>.</p>

            <p>Why use this app?</p>
            <p>
            - You\'ll never be <b>tracked</b><br/>
            - You\'ll never see boring <b>ads</b><br/>
            - We\'ll always respect your <b>privacy</b><br/>
            - Moreover, it\'s lightweight!<br/>
            </p>

            <h2>How does it work?</h2>
            <p>This app is a client for consult the online map <b>OpenSeaMap</b> "for personal use".</p>

            <p>Who worked on SeaMapDroid:<br/>
            - <b>Marco Magliano</b> main developer.<br/>
            - <a href="https://github.com/marcoM32/SeaMapDroid/graphs/contributors">All the contributors</a>!
            </p>

            <h2>Licenses</h2>
            <p>The app and the related source code are released by Marco Magliano under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.html"><i>GNU General Public License (v3)</i></a>.</p>

            <p>The logo and the relative source are released by Ahmad Naufal Mukhtar under the terms of the <a href="https://opensource.org/licenses/MIT"><i>MIT License</i></a>.</p>

            <p>So everyone is allowed to use, to study, to improve and to share this app by <b>any kind of means</b> and for <b>any purpose</b>: under the conditions of maintaining this rights and of attributing the original work to Marco Magliano.</p>

            <h2>Notes</h2>
            <p>This app has been developed <b>hoping to be useful to everyone</b> but without ANY warranty.</p>
            <p>Get involved! :)</p>
        ]]>
    </string>
    <string name="app_license" translatable="false">
        <![CDATA[
            Copyright &#169; 2017-2019 Magliano Marco
            <br/><br/>
            This program is free software: you can redistribute it and/or modify
            it under the terms of the GNU General Public License as published by
            the Free Software Foundation (version 3 of the License).
            <br/><br/>
            This program is distributed in the hope that it will be useful,
            but WITHOUT ANY WARRANTY; without even the implied warranty of
            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
            GNU General Public License for more details.
            <br/><br/>
            You should have received a copy of the GNU General Public License
            along with this program. If not, see:<br/>
            &lt;<a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>&gt;
        ]]>
    </string>
    <string name="logo_license" translatable="false">
        <![CDATA[
            MIT License
            <br/><br/>
            Copyright &#169; 2018 Ahmad Naufal Mukhtar
            <br/><br/>
            Permission is hereby granted, free of charge, to any person obtaining a copy
            of this software and associated documentation files (the "Software"), to deal
            in the Software without restriction, including without limitation the rights
            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
            copies of the Software, and to permit persons to whom the Software is
            furnished to do so, subject to the following conditions:
            <br/><br/>
            The above copyright notice and this permission notice shall be included in all
            copies or substantial portions of the Software.
            <br/><br/>
            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
            SOFTWARE.
        ]]>
    </string>
</resources>
