<?xml version="1.0" encoding="utf-8"?>

<!--
  SeaMapDroid - An Android application to consult the libre online maps OpenSeaMap (map.openseamap.org)
  Copyright (C) 2017 Marco Magliano

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preferences">

    <PreferenceCategory
        android:key="pref_map_category"
        android:title="@string/preferences">

        <CheckBoxPreference
            android:key="pref_mapnik"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/preference_show_mapnik"
            android:summary="@string/preference_show_mapnik_summary"
            android:persistent="true"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="pref_deeps"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/preference_show_deeps"
            android:summary="@string/preference_show_deeps_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_seamark"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/preference_show_seamark"
            android:summary="@string/preference_show_seamark_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_pois"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/preference_show_pois"
            android:summary="@string/preference_show_pois_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_grid"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/preference_show_grid"
            android:summary="@string/preference_show_grid_summary"
            android:persistent="true"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_gps_category"
        android:title="@string/preference_gps">

    <CheckBoxPreference
        android:key="pref_center_map"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/preference_center_map"
        android:summary="@string/preference_center_map_summary"
        android:persistent="true"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_trace_route"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/preference_trace_route"
        android:summary="@string/preference_trace_route_summary"
        android:persistent="true"
        android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
